# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import alertsRouter from "./alerts";
+import airportsRouter from "./airports";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(alertsRouter);
+router.use(airportsRouter);
 
 export default router;
